--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -25,11 +25,7 @@ dependencies:
     sdk: flutter
   dio: ^4.0.0
   json_annotation: ^4.0.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
