--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dio: ^4.0.0
   json_annotation: ^4.0.0
   provider: ^6.0.0
+  horizontal_data_table: ^3.4.3
 
 dev_dependencies:
   flutter_test:
