--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
     sdk: flutter
   json_serializable: ^4.1.4
   build_runner: ^2.0.0
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
