--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   json_annotation: ^4.0.0
   provider: ^6.0.0
   horizontal_data_table: ^3.4.3
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
@@ -42,14 +43,14 @@ dev_dependencies:
 flutter:
 
   # The following line ensures that the Material Icons font is
+  # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - images/stat.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
