--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   provider: ^6.0.0
   horizontal_data_table: ^3.4.3
   flutter_svg: ^0.22.0
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
