flutter_launcher_iconsライブラリー導入

--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   horizontal_data_table: ^3.4.3
   flutter_svg: ^0.22.0
   package_info: ^2.0.2
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
