--- a/estatjapan/android/app/build.gradle
+++ b/estatjapan/android/app/build.gradle
@@ -53,11 +53,15 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
+    ndkVersion "23.0.7599858" //ここにNDKのバージョンを記入
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
+            ndk {
+                debugSymbolLevel 'SYMBOL_TABLE' //追記
+            }
         }
     }
 }
