--- a/estatjapan/android/app/src/main/AndroidManifest.xml
+++ b/estatjapan/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.estatjapan">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="在留取得統計"
         android:icon="@mipmap/ic_launcher">
