--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -53,8 +53,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/stat.svg
-     - images/daqige_icon.png
+     - images/
+     - lib/config/dev.json
+     - lib/config/prod.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
