--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_package:
+    path: ./flutter_package/
   dio: ^4.0.0
   json_annotation: ^4.0.0
   provider: ^6.0.0
@@ -54,7 +56,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/
+#     - images/
      - lib/config/dev.json
      - lib/config/prod.json
 
