アプリ機能広告追加

--- a/estatjapan/android/app/src/main/AndroidManifest.xml
+++ b/estatjapan/android/app/src/main/AndroidManifest.xml
@@ -14,12 +14,15 @@
         </intent>
     </queries>
    <application
+       android:name=".MyApplication"
+       android:supportsRtl="true"
+       android:taskAffinity=""
+       android:allowBackup="true"
         android:label="在留取得統計"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
-            android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
@@ -45,6 +48,17 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+       <activity
+           android:name=".SplashActivity"
+           android:exported="true"
+           android:noHistory="true"
+           android:theme="@style/SplashTheme">
+           <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
+               <category android:name="android.intent.category.LAUNCHER" />
+           </intent-filter>
+       </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
