--- a/estatjapan/analysis_options.yaml
+++ b/estatjapan/analysis_options.yaml
@@ -101,6 +101,9 @@ linter:
 #    - avoid_positional_boolean_parameters
 #    - avoid_field_initializers_in_const_classes
 
+analyzer:
+  errors:
+    file_names: ignore
 
 
   # avoid_print: false  # Uncomment to disable the `avoid_print` rule
