--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   package_info_plus: ^1.0.6
   url_launcher: ^6.0.10
   google_mobile_ads: ^0.13.4
+  webview_flutter_plus: ^0.2.3
 
 dev_dependencies:
   flutter_test:
