--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   url_launcher: ^6.0.10
   google_mobile_ads: ^0.13.4
   webview_flutter: ^2.0.0
+  fl_chart: ^0.40.0
 
 dev_dependencies:
   flutter_test:
