--- a/estatjapan/android/app/src/main/AndroidManifest.xml
+++ b/estatjapan/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,16 @@
        android:allowBackup="true"
         android:label="在留取得統計"
         android:icon="@mipmap/ic_launcher">
+       <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
+     See README(https://goo.gl/l4GJaQ) for more. -->
+       <meta-data
+           android:name="com.google.firebase.messaging.default_notification_icon"
+           android:resource="@drawable/ic_launcher" />
+       <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+            notification message. See README(https://goo.gl/6BKBk7) for more. -->
+       <meta-data
+           android:name="com.google.firebase.messaging.default_notification_color"
+           android:resource="@color/colorAccent" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -65,5 +75,12 @@
        <meta-data
            android:name="com.google.android.gms.ads.APPLICATION_ID"
            android:value="${AD_APPLICATION_ID}"/>
+       <service
+           android:name=".MyFirebaseMessagingService"
+           android:exported="false">
+           <intent-filter>
+               <action android:name="com.google.firebase.MESSAGING_EVENT" />
+           </intent-filter>
+       </service>
     </application>
 </manifest>
