firebaseライブラリ導入

--- a/estatjapan/ios/Podfile
+++ b/estatjapan/ios/Podfile
@@ -33,6 +33,8 @@ target 'Runner' do
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   pod 'Google-Mobile-Ads-SDK'
+  pod 'Firebase/Analytics'
+  pod 'Firebase/Messaging'
 end
 
 post_install do |installer|
