--- a/estatjapan/ios/Runner/GoogleService-Info.plist
+++ b/estatjapan/ios/Runner/GoogleService-Info.plist
@@ -2,33 +2,33 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>186219180939-h9f4enmedhkm34gqsk3robvr4lfnqfm4.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.186219180939-h9f4enmedhkm34gqsk3robvr4lfnqfm4</string>
-	<key>API_KEY</key>
-	<string>AIzaSyBBOtu0yl3JNgLMpWOk7b5OH75Fpb1pouA</string>
-	<key>GCM_SENDER_ID</key>
-	<string>186219180939</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>com.estatjapan</string>
-	<key>PROJECT_ID</key>
-	<string>estatjapan-4faeb</string>
-	<key>STORAGE_BUCKET</key>
-	<string>estatjapan-4faeb.appspot.com</string>
-	<key>IS_ADS_ENABLED</key>
-	<false></false>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
-	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
-	<key>IS_GCM_ENABLED</key>
-	<true></true>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:186219180939:ios:fe515f9e32adca34f9758e</string>
+    <key>CLIENT_ID</key>
+    <string>569212364150-ugocfgvoi2esplaqkbh67h4nhgkus3q9.apps.googleusercontent.com</string>
+    <key>REVERSED_CLIENT_ID</key>
+    <string>com.googleusercontent.apps.569212364150-ugocfgvoi2esplaqkbh67h4nhgkus3q9</string>
+    <key>API_KEY</key>
+    <string>AIzaSyBoWTFuLlwUaaFSjduzcGpWz1Zx1xx4Ras</string>
+    <key>GCM_SENDER_ID</key>
+    <string>569212364150</string>
+    <key>PLIST_VERSION</key>
+    <string>1</string>
+    <key>BUNDLE_ID</key>
+    <string>com.estatjapan</string>
+    <key>PROJECT_ID</key>
+    <string>estatjapan-4a8ac</string>
+    <key>STORAGE_BUCKET</key>
+    <string>estatjapan-4a8ac.appspot.com</string>
+    <key>IS_ADS_ENABLED</key>
+    <false></false>
+    <key>IS_ANALYTICS_ENABLED</key>
+    <false></false>
+    <key>IS_APPINVITE_ENABLED</key>
+    <true></true>
+    <key>IS_GCM_ENABLED</key>
+    <true></true>
+    <key>IS_SIGNIN_ENABLED</key>
+    <true></true>
+    <key>GOOGLE_APP_ID</key>
+    <string>1:569212364150:ios:61e43ce6802185d3a70657</string>
 </dict>
 </plist>
