Flutterにfirebase_crashlyticsライブラリー追加

--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   fl_chart: ^0.40.0
   firebase_core: ^1.7.0
   firebase_analytics: ^8.3.3
+  firebase_crashlytics: ^2.2.2
 
 dev_dependencies:
   flutter_test:
