--- a/estatjapan/ios/Podfile
+++ b/estatjapan/ios/Podfile
@@ -36,6 +36,7 @@ target 'Runner' do
   pod 'Firebase/Analytics'
   pod 'Firebase/Messaging'
   pod 'Firebase/Crashlytics'
+  pod 'FirebaseFirestore', :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git', :tag => '8.6.0'
 end
 
 post_install do |installer|
