--- a/estatjapan/ios/Runner/Info.plist
+++ b/estatjapan/ios/Runner/Info.plist
@@ -212,5 +212,7 @@
 	<false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
+    <key>NSUserTrackingUsageDescription</key>
+    <string>「許可」するとお客様に最適化された広告が表示されます</string>
 </dict>
 </plist>
