--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+7
+version: 2.0.0+8
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -44,6 +44,7 @@ dev_dependencies:
   build_runner: ^2.0.0
   flutter_lints: ^1.0.4
   flutter_launcher_icons: ^0.9.1
+  pigeon: ^1.0.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
