--- a/estatjapan/android/build.gradle
+++ b/estatjapan/android/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.5.31'
+    ext.billingVersion = '4.0.0'
     repositories {
         google()
         mavenCentral()
