--- a/estatjapan/android/build.gradle
+++ b/estatjapan/android/build.gradle
@@ -1,6 +1,12 @@
 buildscript {
     ext.kotlin_version = '1.5.31'
     ext.billingVersion = '4.0.0'
+    ext.gsonVersion= '2.8.2'
+    ext.firebaseAuthVersion = '12.0.1' // TODO: Update to 16.1.0 or newer.
+    ext.firebaseCoreVersion = '12.0.1' // TODO: Update to 16.0.6 or newer.
+    ext.firebaseFunctionsVersion = '12.0.1' // TODO: Update to 16.1.3 or newer.
+    ext.firebaseUiVersion = '3.3.0'
+    ext.archLifecycleVersion = '1.1.1'
     repositories {
         google()
         mavenCentral()
