--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: ^1.7.0
   firebase_analytics: ^8.3.3
   firebase_crashlytics: ^2.2.2
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
