--- a/estatjapan/ios/Podfile
+++ b/estatjapan/ios/Podfile
@@ -32,8 +32,8 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  pod 'Google-Mobile-Ads-SDK'
-  pod 'Firebase/Analytics'
+  pod 'Google-Mobile-Ads-SDK', '= 8.5.0'
+  pod 'Firebase/Analytics', '= 8.7.0'
   pod 'Firebase/Messaging'
   pod 'Firebase/Crashlytics'
   pod 'FirebaseFirestore', :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git', :tag => '8.6.0'
