--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  json_serializable:
+
+  freezed_annotation:
+
+  shared_preferences:
+
+  google_mobile_ads:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,6 +53,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+  freezed:
+
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
