--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -35,13 +35,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  json_serializable:
-
   freezed_annotation:
+  json_annotation:
+
+  dio:
+  provider:
+  webview_flutter:
+  url_launcher:
 
   shared_preferences:
 
   google_mobile_ads:
+  firebase_core:
+  firebase_analytics:
+  firebase_crashlytics:
+  json_serializable:
 
 dev_dependencies:
   flutter_test:
