--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
 
   dio:
   provider:
+  state_notifier:
+  flutter_state_notifier:
   webview_flutter:
   url_launcher:
 
@@ -66,7 +68,7 @@ dev_dependencies:
   freezed:
 
   build_runner:
-
+  mockito:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
