--- a/estatjapan/android/build.gradle
+++ b/estatjapan/android/build.gradle
@@ -1,5 +1,12 @@
 buildscript {
     ext.kotlin_version = '1.6.10'
+    ext.billingVersion = '5.0.0'
+    ext.gsonVersion= '2.8.9'
+    ext.firebaseAuthVersion = '21.0.7'
+    ext.firebaseCoreVersion = '21.1.0'
+    ext.firebaseFunctionsVersion = '20.1.0'
+    ext.firebaseUiVersion = '8.0.1'
+    ext.archLifecycleVersion = '1.1.1'
     repositories {
         google()
         mavenCentral()
@@ -8,6 +15,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
     }
 }
 
@@ -15,6 +24,11 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+    }
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
     }
 }
 
