--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -74,6 +74,7 @@ dev_dependencies:
 
   build_runner:
   mockito:
+  flutter_launcher_icons:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -90,6 +91,7 @@ flutter:
   assets:
     - lib/config/dev.json
     - lib/config/prod.json
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -116,3 +118,15 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/app_icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "images/app_icon.png"
+    background_color: "#FFFFFF"
+    theme_color: "#F17925"
