--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -72,7 +72,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints:
-  pigeon:
+  pigeon: ^4.2.3
 
   freezed:
 
