android課金仮実装

--- a/estatjapan/android/app/src/main/AndroidManifest.xml
+++ b/estatjapan/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.estatjapan.estatjapan">
+    package="com.estatjapan">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <uses-permission android:name="com.android.vending.BILLING" />
     <queries>
         <!-- If your app opens https URLs -->
         <intent>
