--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 3.0.0+1
+version: 3.0.0+14
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -61,6 +61,9 @@ dependencies:
   flutter_inappwebview:
   flutter_riverpod:
   flex_color_scheme:
+  in_app_purchase: ^3.0.7
+  in_app_purchase_android: ^0.2.1
+  in_app_purchase_storekit: ^0.3.0+1
 
 dev_dependencies:
   flutter_test:
