--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   in_app_purchase: ^3.0.7
   in_app_purchase_android: ^0.2.1
   in_app_purchase_storekit: ^0.3.0+1
+  get: 4.6.5
 
 dev_dependencies:
   flutter_test:
