--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_messaging: ^14.0.2
+
+#  firebase_messaging: 9.0.0
 
   freezed_annotation:
   json_annotation:
@@ -48,10 +49,10 @@ dependencies:
 
   shared_preferences:
 
-  google_mobile_ads: ^2.1.0
-  firebase_core: ^2.1.0
-  firebase_analytics: ^10.0.2
-  firebase_crashlytics: ^3.0.2
+  google_mobile_ads: ^2.0.0
+  firebase_core: ^1.7.0
+  firebase_analytics: ^8.3.3
+  firebase_crashlytics: ^2.2.2
   json_serializable:
   stack_trace:
   package_info_plus:
