--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 3.0.0+14
+version: 3.0.0+15
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-#  firebase_messaging: 9.0.0
+  firebase_messaging: 9.0.0
 
   freezed_annotation:
   json_annotation:
