--- a/estatjapan/pubspec.yaml
+++ b/estatjapan/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  firebase_messaging: 9.0.0
+  firebase_messaging: ^13.0.2
 
   freezed_annotation:
   json_annotation:
