--- a/estatjapan/ios/firebase_app_id_file.json
+++ b/estatjapan/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:569212364150:ios:61e43ce6802185d3a70657",
-  "FIREBASE_PROJECT_ID": "estatjapan-4a8ac",
-  "GCM_SENDER_ID": "569212364150"
+  "GOOGLE_APP_ID": "1:327810721125:ios:6c91c3a4197241fdf3ad8c",
+  "FIREBASE_PROJECT_ID": "estatjapan-e3be3",
+  "GCM_SENDER_ID": "327810721125"
 }
