--- a/estatjapan/ios/Runner/Info.plist
+++ b/estatjapan/ios/Runner/Info.plist
@@ -27,7 +27,7 @@
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>GADApplicationIdentifier</key>
-	<string>ca-app-pub-2960563678064187~5475422148</string>
+	<string>ca-app-pub-6766831133184942~3038724788</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -35,6 +35,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+    <key>FirebaseAutomaticScreenReportingEnabled</key>
+    <false/>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
